add update coin data function
