# app/Http/Controllers/DefaultController.php
@@ -15,7 +15,6 @@ class DefaultController extends Controller
      *   tags={"Coins"},
      *   summary="All supported coin",
      *   operationId="all supported coin",
-     *   security={{ "apiAuth": {} }},
      *   @OA\Response(
      *      response=200,
      *       description="Success",
@@ -36,7 +35,6 @@ class DefaultController extends Controller
      *   tags={"Coins"},
      *   summary="Show coin",
      *   operationId="show coin",
-     *   security={{ "apiAuth": {} }},
      *     @OA\Parameter(
      *      name="coin",
      *      in="path",
@@ -80,5 +78,27 @@ class DefaultController extends Controller
             }
         }
         return $coinArr;
+    }
+
+    public static function updateSupportedCoinsData()
+    {
+        $newData = [];
+        $supportedCoins = Coin::all()->pluck('short_name')->toArray();
+        $coins = Http::withHeaders([
+            'Content-type' => 'application/json',
+            'X-API-Key' => env('CRYPTO_API_KEY')
+        ])->get(env('CRYPTO_API_MAIN_BASE_URL').'/assets')->json()['payload'];
+        foreach ($coins as $coin) {
+            if (in_array($coin['originalSymbol'], $supportedCoins)) {
+                $newData[Str::upper($coin['originalSymbol'])] = [
+                    'market_cap' => $coin['marketCap'],
+                    'volume' => $coin['volume'],
+                    'price' => $coin['price']
+                ];
+            }
+        }
+        Coin::all()->each(function ($coin) use ($newData) {
+            $coin->update($newData[Str::upper($coin['short_name'])]);
+        });
     }
 }
