# storage/api-docs/api-docs.json
@@ -477,12 +477,7 @@
                             "application/json": {}
                         }
                     }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
+                }
             }
         },
         "/coins/{coin}/show": {
@@ -510,12 +505,7 @@
                             "application/json": {}
                         }
                     }
-                },
-                "security": [
-                    {
-                        "apiAuth": []
-                    }
-                ]
+                }
             }
         },
         "/offers": {
